lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:2: error: type mismatch;
 found   : java.util.List[lessons.lander.universe.Point]
 required: scala.collection.immutable.List[lessons.lander.universe.Point]
  	val Liste:List[Point]=getSol()
                                    ^Lander:6: error: value update is not a member of object Array
  			Array(0)=Liste(i)
                        ^Lander:7: error: value update is not a member of object Array
  			Array(1)=Liste(i+1)
                        ^